--- a/anomalysolutions.ipynb
+++ b/anomalysolutions.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,22 +30,24 @@
     "import itertools\n",
     "import sys\n",
     "\n",
-    "def get_conditions(uf,nu_R,l=0,D=5):\n",
+    "def get_conditions(uf,nu_R,l=0,Dim=5):\n",
     "    #uf=np.sort(np.unique(xdf))\n",
     "    Ls=-l    \n",
     "    Type='X'\n",
     "    if Ls==0:\n",
     "        Type='D'\n",
     "        \n",
-    "    if D==5:\n",
+    "    if Dim==5:\n",
     "        d=2\n",
-    "    elif D==6:\n",
+    "    elif Dim==6:\n",
     "        d=4\n",
     "    \n",
-    "    md=[ {'{}→nu_R+{}fi'.format(Type,d):[nu_R,p]} for p in uf if nu_R+2*p-Ls==0 ]\n",
+    "    md=[ {'{}→nu_R+{}fi'.format(Type,d):[nu_R,p]} for p in uf if nu_R+d*p-Ls==0 ]\n",
     "    prmts=get_permutations(uf,3)\n",
-    "    md=md+[ {'{}→nu_R+fi+fj'.format(Type):list(p)} for p in prmts if nu_R in p and p.sum()-Ls==0 ]\n",
-    "        \n",
+    "    if Dim==5:\n",
+    "        md=md+[ {'{}→nu_R+fi+fj'.format(  Type):list(p)} for p in prmts if nu_R in p and   p.sum()     -Ls==0 ]\n",
+    "    elif Dim==6:\n",
+    "        md=md+[ {'{}→nu_R+2fi+2fj'.format(Type):list(p)} for p in prmts if nu_R in p and 2*p.sum()-nu_R-Ls==0 ]        \n",
     "    if md:\n",
     "        return md\n",
     "    else:\n",
@@ -82,7 +84,7 @@
     "    return {'Σf':f.sum(), 'Σf³':(f**3).sum(),'multiplets':rptd}\n",
     "\n",
     "#row=df.loc[28]\n",
-    "def get_solutions(row,solution=''):\n",
+    "def get_solutions(row,solution='',Dim=5):\n",
     "    if not solution:\n",
     "        f=np.array( [  row['f{}'.format(i)] for i in range(1,10) if row['f{}'.format(i)]!=0    ]  )\n",
     "    else:\n",
@@ -101,7 +103,7 @@
     "        \n",
     "    XD=[]\n",
     "    for nu_R in nu_Rs:\n",
-    "        Ds=get_conditions(uf,nu_R,l=0)\n",
+    "        Ds=get_conditions(uf,nu_R,l=0,Dim=Dim)\n",
     "        for D in Ds:\n",
     "            if D not in XD:\n",
     "                XD.append(D)\n",
@@ -125,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,38 +159,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "def z(l,k,sort=True,reverse=True):\n",
-    "    '''\n",
-    "    Implementation of arXiv:1905.13729\n",
-    "    For l,k two set of same dimensions (or k with an extra dimension)\n",
-    "    return a builded array z, such that\n",
-    "     sum( z )=0\n",
-    "     sum( z**3)=0\n",
-    "    '''\n",
-    "    l=list(l)\n",
-    "    k=list(k)\n",
-    "    #Build vector-like solutions x,y\n",
-    "    if len(l)==len(k) :\n",
-    "        x=np.array( [l[0]]+k+[-l[0]]+[-i for i in k ])\n",
-    "        y=np.array( [0,0] +l        +[-i for i in l ])\n",
-    "    else:\n",
-    "        x=np.array( [0]+k+[-i for i in k ] )\n",
-    "        y=np.array( l+[k[0]]+[0]+[-i for i in l ]+[-k[0]])\n",
-    "    xfac=0\n",
-    "    yfac=0\n",
-    "    # Build not trivial solution\n",
-    "    zz=(x*y**2).sum()*x-(x**2*y).sum()*y\n",
-    "    if sort:\n",
-    "        zz=sorted( zz ,key=abs, reverse=reverse ) \n",
-    "    return np.array(zz)"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +200,7 @@
     "q={}\n",
     "l={}\n",
     "k={}\n",
-    "for search in range(48000000):\n",
+    "for search in range(48):#000000):\n",
     "    if search%500000==0: print(\"**** {} ******\".format(search))\n",
     "    qmax=32\n",
     "    nmin=-10;nmin2=-10\n",
@@ -270,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +301,7 @@
        "0  [-1, -2]  [2]  5  [2, 4, -7, -9, 10]    1"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +328,7 @@
        "(24326, 5)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +355,7 @@
        "(24326, 5)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +375,7 @@
        "(-29, 24, -25, 21)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +439,7 @@
        "0  [-1, -2]  [2]  5  [2, 4, -7, -9, 10]    1"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +616,7 @@
        "11   [1, -1]   [-5]  5  [2, 18, -23, -25, 28]    1"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -664,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -678,19 +650,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "D=5\n",
+    "if D==5:\n",
+    "    dd=''\n",
+    "    dm=1\n",
+    "elif D==6:\n",
+    "    dd='2'\n",
+    "    dm=2\n",
+    "ds['nu_R']=ds.apply(lambda row: get_solutions(row,solution='solution')\n",
+    "                    ,axis='columns')\n",
+    "ds['DarkDirac']=ds['nu_R'].apply(lambda l: [ 'D→nu_R+{}fi+{}fj'.format(dd,dd) in d.keys() for d in l] \n",
+    "                     ).apply(lambda l: [True for T in l if T] ).apply(len)\n",
+    "ds['DarkMajor']=ds['nu_R'].apply(lambda l: [ 'D→nu_R+{}fi'.format(2*dm) in d.keys() for d in l] \n",
+    "                     ).apply(lambda l: [True for T in l if T] ).apply(len)\n",
+    "ds['XDirac']=ds['nu_R'].apply(lambda l: [ 'X→nu_R+{}fi+{}fj'.format(dd,dd) in d.keys() for d in l] \n",
+    "                     ).apply(lambda l: [True for T in l if T] ).apply(len)\n",
+    "ds['XMajor']=ds['nu_R'].apply(lambda l: [ 'X→nu_R+{}fi'.format(2*dm) in d.keys() for d in l] \n",
+    "                     ).apply(lambda l: [True for T in l if T] ).apply(len)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "ds['nu_R']=ds.apply(lambda row: get_solutions(row,solution='solution')\n",
     "                    ,axis='columns')\n",
-    "ds['DarkDirac']=ds['nu_R'].apply(lambda l: [ 'D→nu_R+fi+fj' in d.keys() for d in l] \n",
+    "ds['DarkDirac']=ds['nu_R'].apply(lambda l: [ 'D→nu_R+2fi+2fj' in d.keys() for d in l] \n",
     "                     ).apply(lambda l: [True for T in l if T] ).apply(len)\n",
-    "ds['DarkMajor']=ds['nu_R'].apply(lambda l: [ 'D→nu_R+2fi' in d.keys() for d in l] \n",
+    "ds['DarkMajor']=ds['nu_R'].apply(lambda l: [ 'D→nu_R+4fi' in d.keys() for d in l] \n",
     "                     ).apply(lambda l: [True for T in l if T] ).apply(len)\n",
-    "ds['XDirac']=ds['nu_R'].apply(lambda l: [ 'X→nu_R+fi+fj' in d.keys() for d in l] \n",
+    "ds['XDirac']=ds['nu_R'].apply(lambda l: [ 'X→nu_R+2fi+2fj' in d.keys() for d in l] \n",
     "                     ).apply(lambda l: [True for T in l if T] ).apply(len)\n",
-    "ds['XMajor']=ds['nu_R'].apply(lambda l: [ 'X→nu_R+2fi' in d.keys() for d in l] \n",
+    "ds['XMajor']=ds['nu_R'].apply(lambda l: [ 'X→nu_R+4fi' in d.keys() for d in l] \n",
     "                     ).apply(lambda l: [True for T in l if T] ).apply(len)"
    ]
   },
