Start to include Dimension 6 solutions in the same notebook

--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -481,6 +481,92 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 593,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DarkDirac</th>\n",
+       "      <th>DarkMajor</th>\n",
+       "      <th>XDirac</th>\n",
+       "      <th>XMajor</th>\n",
+       "      <th>gcd</th>\n",
+       "      <th>k</th>\n",
+       "      <th>l</th>\n",
+       "      <th>n</th>\n",
+       "      <th>nu_R</th>\n",
+       "      <th>sltn</th>\n",
+       "      <th>solution</th>\n",
+       "      <th>DD</th>\n",
+       "      <th>DM</th>\n",
+       "      <th>XD</th>\n",
+       "      <th>XM</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1542</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>[-2, -5, -2, 3]</td>\n",
+       "      <td>[-4, -2, -4]</td>\n",
+       "      <td>9</td>\n",
+       "      <td>[{'D→nu_R+fi+fj': [-9, 2, 7]}]</td>\n",
+       "      <td>{'4': [2]}</td>\n",
+       "      <td>[2, 2, 2, 2, 7, -8, -9, -11, 13]</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      DarkDirac  DarkMajor  XDirac  XMajor  gcd                k  \\\n",
+       "1542          1          0       0       0    8  [-2, -5, -2, 3]   \n",
+       "\n",
+       "                 l  n                            nu_R        sltn  \\\n",
+       "1542  [-4, -2, -4]  9  [{'D→nu_R+fi+fj': [-9, 2, 7]}]  {'4': [2]}   \n",
+       "\n",
+       "                              solution DD DM XD XM  \n",
+       "1542  [2, 2, 2, 2, 7, -8, -9, -11, 13]  0  0  0  0  "
+      ]
+     },
+     "execution_count": 593,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cl[1542:1543]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 591,
    "metadata": {},
    "outputs": [
