--- a/anomalysolutions.ipynb
+++ b/anomalysolutions.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,18 +116,45 @@
     "            new_nu_Rs=nu_Rs.copy()\n",
     "            new_nu_Rs.remove(l)\n",
     "            for new_nu_R in new_nu_Rs:\n",
-    "                Xs=get_conditions(xf,new_nu_R,l)\n",
+    "                Xs=get_conditions(xf,new_nu_R,l,Dim=Dim)\n",
     "                #print(l,new_nu_R,Xs)            \n",
     "                for X in Xs:\n",
     "                    if X not in XD:\n",
     "                        XD.append(X)\n",
     "        #TODO if rptd.get(4)\n",
-    "    return XD"
+    "    return XD\n",
+    "\n",
+    "def extract_multiplets(df,i,greater_than=0,column='solution'):\n",
+    "    dff=df[df[column].apply(\n",
+    "             lambda f: repeated(np.asarray(f))).str[i].apply( #get charges in multiplet i\n",
+    "             lambda l: len(l) if isinstance(l,list) else 0)>greater_than  # count charges in multiplets and filter for >\n",
+    "           ].reset_index(drop=True)\n",
+    "    return dff\n",
+    "\n",
+    "def label_solutions(dsd,Dim=5):\n",
+    "    ds=dsd.copy()\n",
+    "    if Dim==5:\n",
+    "        dd=''\n",
+    "        dm=1\n",
+    "    elif Dim==6:\n",
+    "        dd='2'\n",
+    "        dm=2\n",
+    "    ds['nu_R']=ds.apply(lambda row: get_solutions(row,solution='solution',Dim=Dim)\n",
+    "                        ,axis='columns')\n",
+    "    ds['DarkDirac']=ds['nu_R'].apply(lambda l: [ 'D→nu_R+{}fi+{}fj'.format(dd,dd) in d.keys() for d in l] \n",
+    "                         ).apply(lambda l: [True for T in l if T] ).apply(len)\n",
+    "    ds['DarkMajor']=ds['nu_R'].apply(lambda l: [ 'D→nu_R+{}fi'.format(2*dm) in d.keys() for d in l] \n",
+    "                         ).apply(lambda l: [True for T in l if T] ).apply(len)\n",
+    "    ds['XDirac']=ds['nu_R'].apply(lambda l: [ 'X→nu_R+{}fi+{}fj'.format(dd,dd) in d.keys() for d in l] \n",
+    "                         ).apply(lambda l: [True for T in l if T] ).apply(len)\n",
+    "    ds['XMajor']=ds['nu_R'].apply(lambda l: [ 'X→nu_R+{}fi'.format(2*dm) in d.keys() for d in l] \n",
+    "                         ).apply(lambda l: [True for T in l if T] ).apply(len)\n",
+    "    return ds"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +328,7 @@
        "0  [-1, -2]  [2]  5  [2, 4, -7, -9, 10]    1"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +355,7 @@
        "(24326, 5)"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,51 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(24326, 5)"
-      ]
-     },
-     "execution_count": 80,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ds.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(-29, 24, -25, 21)"
-      ]
-     },
-     "execution_count": 82,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "( ds['k'].apply(lambda l: np.min(l)   ).min(),\n",
-    "  ds['k'].apply(lambda l: np.max(l)   ).max(),\n",
-    " ds['l'].apply(lambda l: np.min(l)   ).min(),\n",
-    "  ds['l'].apply(lambda l: np.max(l)   ).max()\n",
-    ") "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +422,7 @@
        "0  [-1, -2]  [2]  5  [2, 4, -7, -9, 10]    1"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,181 +432,14 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "k→ -10,21; l →,-10,15"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "SAVE=False\n",
     "if SAVE:\n",
     "    ds.to_json('solutions.json')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 85,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>k</th>\n",
-       "      <th>l</th>\n",
-       "      <th>n</th>\n",
-       "      <th>solution</th>\n",
-       "      <th>gcd</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>[-1, -2]</td>\n",
-       "      <td>[2]</td>\n",
-       "      <td>5</td>\n",
-       "      <td>[2, 4, -7, -9, 10]</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>[2, 6]</td>\n",
-       "      <td>[-10]</td>\n",
-       "      <td>5</td>\n",
-       "      <td>[5, 8, -14, -26, 27]</td>\n",
-       "      <td>48</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>[3, 5]</td>\n",
-       "      <td>[-3]</td>\n",
-       "      <td>5</td>\n",
-       "      <td>[7, 8, -18, -22, 25]</td>\n",
-       "      <td>9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>[-5, 5]</td>\n",
-       "      <td>[-4]</td>\n",
-       "      <td>5</td>\n",
-       "      <td>[7, 8, -17, -25, 27]</td>\n",
-       "      <td>50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>[1, 4]</td>\n",
-       "      <td>[-1]</td>\n",
-       "      <td>5</td>\n",
-       "      <td>[1, 5, -7, -8, 9]</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>[-9, -3]</td>\n",
-       "      <td>[3]</td>\n",
-       "      <td>5</td>\n",
-       "      <td>[5, 11, -18, -26, 28]</td>\n",
-       "      <td>243</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>[9, 4]</td>\n",
-       "      <td>[6]</td>\n",
-       "      <td>5</td>\n",
-       "      <td>[5, 6, -12, -21, 22]</td>\n",
-       "      <td>27</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>[10, 12]</td>\n",
-       "      <td>[-5]</td>\n",
-       "      <td>5</td>\n",
-       "      <td>[1, 14, -17, -18, 20]</td>\n",
-       "      <td>300</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>[1, -4]</td>\n",
-       "      <td>[-2]</td>\n",
-       "      <td>5</td>\n",
-       "      <td>[4, 9, -14, -25, 26]</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>[-5, 1]</td>\n",
-       "      <td>[-3]</td>\n",
-       "      <td>5</td>\n",
-       "      <td>[7, 9, -20, -22, 26]</td>\n",
-       "      <td>15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>[6, -2]</td>\n",
-       "      <td>[16]</td>\n",
-       "      <td>5</td>\n",
-       "      <td>[7, 13, -25, -27, 32]</td>\n",
-       "      <td>192</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>[1, -1]</td>\n",
-       "      <td>[-5]</td>\n",
-       "      <td>5</td>\n",
-       "      <td>[2, 18, -23, -25, 28]</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           k      l  n               solution  gcd\n",
-       "0   [-1, -2]    [2]  5     [2, 4, -7, -9, 10]    1\n",
-       "1     [2, 6]  [-10]  5   [5, 8, -14, -26, 27]   48\n",
-       "2     [3, 5]   [-3]  5   [7, 8, -18, -22, 25]    9\n",
-       "3    [-5, 5]   [-4]  5   [7, 8, -17, -25, 27]   50\n",
-       "4     [1, 4]   [-1]  5      [1, 5, -7, -8, 9]    2\n",
-       "5   [-9, -3]    [3]  5  [5, 11, -18, -26, 28]  243\n",
-       "6     [9, 4]    [6]  5   [5, 6, -12, -21, 22]   27\n",
-       "7   [10, 12]   [-5]  5  [1, 14, -17, -18, 20]  300\n",
-       "8    [1, -4]   [-2]  5   [4, 9, -14, -25, 26]    1\n",
-       "9    [-5, 1]   [-3]  5   [7, 9, -20, -22, 26]   15\n",
-       "10   [6, -2]   [16]  5  [7, 13, -25, -27, 32]  192\n",
-       "11   [1, -1]   [-5]  5  [2, 18, -23, -25, 28]    1"
-      ]
-     },
-     "execution_count": 85,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "i=5\n",
-    "ds[ds.n==i]"
    ]
   },
   {
@@ -636,41 +452,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def extract_multiplets(df,i,greater_than=0,column='solution'):\n",
-    "    dff=df[df[column].apply(\n",
-    "             lambda f: repeated(np.asarray(f))).str[i].apply( #get charges in multiplet i\n",
-    "             lambda l: len(l) if isinstance(l,list) else 0)>greater_than  # count charges in multiplets and filter for >\n",
-    "           ].reset_index(drop=True)\n",
-    "    return dff"
+    "ds=label_solutions(ds,Dim=5)\n",
+    "ds6=label_solutions(ds,Dim=6)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "D=5\n",
-    "if D==5:\n",
-    "    dd=''\n",
-    "    dm=1\n",
-    "elif D==6:\n",
-    "    dd='2'\n",
-    "    dm=2\n",
-    "ds['nu_R']=ds.apply(lambda row: get_solutions(row,solution='solution')\n",
-    "                    ,axis='columns')\n",
-    "ds['DarkDirac']=ds['nu_R'].apply(lambda l: [ 'D→nu_R+{}fi+{}fj'.format(dd,dd) in d.keys() for d in l] \n",
-    "                     ).apply(lambda l: [True for T in l if T] ).apply(len)\n",
-    "ds['DarkMajor']=ds['nu_R'].apply(lambda l: [ 'D→nu_R+{}fi'.format(2*dm) in d.keys() for d in l] \n",
-    "                     ).apply(lambda l: [True for T in l if T] ).apply(len)\n",
-    "ds['XDirac']=ds['nu_R'].apply(lambda l: [ 'X→nu_R+{}fi+{}fj'.format(dd,dd) in d.keys() for d in l] \n",
-    "                     ).apply(lambda l: [True for T in l if T] ).apply(len)\n",
-    "ds['XMajor']=ds['nu_R'].apply(lambda l: [ 'X→nu_R+{}fi'.format(2*dm) in d.keys() for d in l] \n",
-    "                     ).apply(lambda l: [True for T in l if T] ).apply(len)"
+    "ds.shape(),ds6.shape()"
    ]
   },
   {
