fixed nasty bug in sltn column

--- a/anomalysolutions.ipynb
+++ b/anomalysolutions.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
        "0  [-1, -2]  [2]  5  [2, 4, -7, -9, 10]    1"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
        "(24326, 5)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +436,7 @@
        "0  [-1, -2]  [2]  5  [2, 4, -7, -9, 10]    1"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +485,7 @@
        "((24326, 10), (24326, 10))"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +604,7 @@
        "2          2          0       0       0  {2: [17]}  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,7 +622,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>k</th>\n",
+       "      <th>l</th>\n",
+       "      <th>n</th>\n",
+       "      <th>solution</th>\n",
+       "      <th>gcd</th>\n",
+       "      <th>nu_R</th>\n",
+       "      <th>DarkDirac</th>\n",
+       "      <th>DarkMajor</th>\n",
+       "      <th>XDirac</th>\n",
+       "      <th>XMajor</th>\n",
+       "      <th>sltn</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1594</th>\n",
+       "      <td>[-9, 6, 3, -6]</td>\n",
+       "      <td>[-2, -7, -5]</td>\n",
+       "      <td>9</td>\n",
+       "      <td>[2, 2, 2, 7, -9, 14, -23, -23, 28]</td>\n",
+       "      <td>45</td>\n",
+       "      <td>[{'D→nu_R+fi+fj': [-9, 2, 7]}, {'X→nu_R+fi+fj': [-23, 7, 14]}]</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>{2: [-23], 3: [2]}</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   k             l  n                            solution  \\\n",
+       "1594  [-9, 6, 3, -6]  [-2, -7, -5]  9  [2, 2, 2, 7, -9, 14, -23, -23, 28]   \n",
+       "\n",
+       "      gcd                                                            nu_R  \\\n",
+       "1594   45  [{'D→nu_R+fi+fj': [-9, 2, 7]}, {'X→nu_R+fi+fj': [-23, 7, 14]}]   \n",
+       "\n",
+       "      DarkDirac  DarkMajor  XDirac  XMajor                sltn  \n",
+       "1594          1          0       1       0  {2: [-23], 3: [2]}  "
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cl[cl['solution'].astype(str)=='[2, 2, 2, 7, -9, 14, -23, -23, 28]']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -723,7 +801,7 @@
        "2  {2: [26]}  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -735,14 +813,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_nuR_i(row,i,model,label):\n",
-    "    if row[model]>0 and row['sltn'].get(i) and row['nu_R'] and len( [ d.get(label) for d in row['nu_R'] if d.get(label)] )>0:\n",
-    "        M=[m  for m in  row['nu_R'] if m.get(label)]\n",
-    "        nuR=[n for n in row['sltn'][i] for m in M  if n in m.get(label)  ]\n",
+    "import copy\n",
+    "def get_nuR_i(nrow,i,model,label):\n",
+    "    if nrow[model]>0 and nrow['sltn'].get(i) and nrow['nu_R'] and len( [ d.get(label) for d in nrow['nu_R'] if d.get(label)] )>0:\n",
+    "        M=[m  for m in  nrow['nu_R'] if m.get(label)]\n",
+    "        nuR=[n for n in nrow['sltn'][i] for m in M  if n in m.get(label)  ]\n",
     "        #print(nuR)\n",
     "        if nuR:\n",
     "            return list(np.unique(nuR))\n",
@@ -750,30 +829,43 @@
     "        return []\n",
     "    \n",
     "\n",
-    "def get_nuR(row,model='DarkDirac'):\n",
-    "    row=row.copy()\n",
+    "def get_nuR(row,model='DarkDirac',Dim=5):\n",
+    "    nrow=row.copy() \n",
+    "    if Dim==5:\n",
+    "        dd=''\n",
+    "        dm=1\n",
+    "    elif Dim==6:\n",
+    "        dd='2'\n",
+    "        dm=2    \n",
     "    if model=='DarkDirac':\n",
-    "        label='D→nu_R+fi+fj'\n",
+    "        label='D→nu_R+{}fi+{}fj'.format(dd,dd)\n",
     "    elif model=='DarkMajor':\n",
-    "        label='D→nu_R+2fi'\n",
+    "        label='D→nu_R+{}fi'.format(2*dm)\n",
     "    elif model=='XDirac':\n",
-    "        label='X→nu_R+fi+fj'\n",
+    "        label='X→nu_R+{}fi+{}fj'.format(dd,dd)\n",
     "    else:\n",
-    "        label='X→nu_R+2fi'\n",
+    "        label='X→nu_R+{}fi'.format(2*dm)\n",
     "        \n",
     "    if model=='XDirac' or model=='XMajor':\n",
-    "        if row[model]>0:\n",
-    "            if row['sltn'].get(3)  and len( row['sltn'].get(3)  ) <= 1:\n",
-    "                kk=row['sltn'].pop(3)\n",
-    "            elif row['sltn'].get(3)  and len( row['sltn'].get(3)  ) > 1:\n",
+    "        if nrow[model]>0:\n",
+    "            if nrow['sltn'].get(3)  and len( nrow['sltn'].get(3)  ) <= 1:\n",
+    "                nrow['sltn']=dict( ((k,v) for k,v in nrow['sltn'].items() if k!=3) )\n",
+    "            elif nrow['sltn'].get(3)  and len( nrow['sltn'].get(3)  ) > 1:\n",
     "                print('WARNING: More than one triplet in X solution not yet implemented in X solutions')\n",
+    "    # model=='DDirac' or model=='DMajor'\n",
     "    else:\n",
     "        i=3\n",
-    "        nuR=get_nuR_i(row,i,model,label)\n",
+    "        nuR=get_nuR_i(nrow,i,model,label)\n",
     "        if nuR:\n",
     "            return nuR\n",
+    "        else:\n",
+    "            i=4\n",
+    "            nuR=get_nuR_i(nrow,i,model,label)\n",
+    "            if nuR:\n",
+    "                return nuR\n",
+    "\n",
     "    i=2\n",
-    "    nuR=get_nuR_i(row,i,model,label)\n",
+    "    nuR=get_nuR_i(nrow,i,model,label)\n",
     "    if nuR:\n",
     "        return nuR    \n",
     "    else: \n",
@@ -782,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -801,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -825,17 +917,17 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>k</th>\n",
+       "      <th>l</th>\n",
+       "      <th>n</th>\n",
+       "      <th>solution</th>\n",
+       "      <th>gcd</th>\n",
+       "      <th>nu_R</th>\n",
        "      <th>DarkDirac</th>\n",
        "      <th>DarkMajor</th>\n",
        "      <th>XDirac</th>\n",
        "      <th>XMajor</th>\n",
-       "      <th>gcd</th>\n",
-       "      <th>k</th>\n",
-       "      <th>l</th>\n",
-       "      <th>n</th>\n",
-       "      <th>nu_R</th>\n",
        "      <th>sltn</th>\n",
-       "      <th>solution</th>\n",
        "      <th>DD</th>\n",
        "      <th>DM</th>\n",
        "      <th>XD</th>\n",
@@ -845,17 +937,17 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
        "      <td>[-5, 0]</td>\n",
        "      <td>[1, -1]</td>\n",
        "      <td>6</td>\n",
-       "      <td>[{'D→nu_R+fi+fj': [-15, 2, 13]}, {'D→nu_R+fi+fj': [-10, -3, 13]}]</td>\n",
-       "      <td>{2: [13]}</td>\n",
        "      <td>[2, -3, -10, 13, 13, -15]</td>\n",
+       "      <td>2</td>\n",
+       "      <td>[{'D→nu_R+fi+fj': [-15, 2, 13]}, {'D→nu_R+fi+fj': [-10, -3, 13]}]</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>{2: [13]}</td>\n",
        "      <td>[13]</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -863,17 +955,17 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>[-1, 0]</td>\n",
+       "      <td>[2, -2]</td>\n",
+       "      <td>6</td>\n",
+       "      <td>[1, -2, -3, 5, 5, -6]</td>\n",
+       "      <td>4</td>\n",
+       "      <td>[{'D→nu_R+fi+fj': [-6, 1, 5]}, {'D→nu_R+fi+fj': [-3, -2, 5]}]</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>[-1, 0]</td>\n",
-       "      <td>[2, -2]</td>\n",
-       "      <td>6</td>\n",
-       "      <td>[{'D→nu_R+fi+fj': [-6, 1, 5]}, {'D→nu_R+fi+fj': [-3, -2, 5]}]</td>\n",
        "      <td>{2: [5]}</td>\n",
-       "      <td>[1, -2, -3, 5, 5, -6]</td>\n",
        "      <td>[5]</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -881,17 +973,17 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>[-4, 0]</td>\n",
+       "      <td>[-1, 1]</td>\n",
+       "      <td>6</td>\n",
+       "      <td>[3, -5, -12, 17, 17, -20]</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[{'D→nu_R+fi+fj': [-20, 3, 17]}, {'D→nu_R+fi+fj': [-12, -5, 17]}]</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>[-4, 0]</td>\n",
-       "      <td>[-1, 1]</td>\n",
-       "      <td>6</td>\n",
-       "      <td>[{'D→nu_R+fi+fj': [-20, 3, 17]}, {'D→nu_R+fi+fj': [-12, -5, 17]}]</td>\n",
        "      <td>{2: [17]}</td>\n",
-       "      <td>[3, -5, -12, 17, 17, -20]</td>\n",
        "      <td>[17]</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -902,23 +994,23 @@
        "</div>"
       ],
       "text/plain": [
-       "   DarkDirac  DarkMajor  XDirac  XMajor  gcd        k        l  n  \\\n",
-       "0          2          0       0       0    2  [-5, 0]  [1, -1]  6   \n",
-       "1          2          0       0       0    4  [-1, 0]  [2, -2]  6   \n",
-       "2          2          0       0       0    1  [-4, 0]  [-1, 1]  6   \n",
+       "         k        l  n                   solution  gcd  \\\n",
+       "0  [-5, 0]  [1, -1]  6  [2, -3, -10, 13, 13, -15]    2   \n",
+       "1  [-1, 0]  [2, -2]  6      [1, -2, -3, 5, 5, -6]    4   \n",
+       "2  [-4, 0]  [-1, 1]  6  [3, -5, -12, 17, 17, -20]    1   \n",
        "\n",
        "                                                                nu_R  \\\n",
        "0  [{'D→nu_R+fi+fj': [-15, 2, 13]}, {'D→nu_R+fi+fj': [-10, -3, 13]}]   \n",
        "1      [{'D→nu_R+fi+fj': [-6, 1, 5]}, {'D→nu_R+fi+fj': [-3, -2, 5]}]   \n",
        "2  [{'D→nu_R+fi+fj': [-20, 3, 17]}, {'D→nu_R+fi+fj': [-12, -5, 17]}]   \n",
        "\n",
-       "        sltn                   solution    DD DM XD XM  \n",
-       "0  {2: [13]}  [2, -3, -10, 13, 13, -15]  [13]  0  0  0  \n",
-       "1   {2: [5]}      [1, -2, -3, 5, 5, -6]   [5]  0  0  0  \n",
-       "2  {2: [17]}  [3, -5, -12, 17, 17, -20]  [17]  0  0  0  "
+       "   DarkDirac  DarkMajor  XDirac  XMajor       sltn    DD DM XD XM  \n",
+       "0          2          0       0       0  {2: [13]}  [13]  0  0  0  \n",
+       "1          2          0       0       0   {2: [5]}   [5]  0  0  0  \n",
+       "2          2          0       0       0  {2: [17]}  [17]  0  0  0  "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -936,7 +1028,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>k</th>\n",
+       "      <th>l</th>\n",
+       "      <th>n</th>\n",
+       "      <th>solution</th>\n",
+       "      <th>gcd</th>\n",
+       "      <th>nu_R</th>\n",
+       "      <th>DarkDirac</th>\n",
+       "      <th>DarkMajor</th>\n",
+       "      <th>XDirac</th>\n",
+       "      <th>XMajor</th>\n",
+       "      <th>sltn</th>\n",
+       "      <th>DD</th>\n",
+       "      <th>DM</th>\n",
+       "      <th>XD</th>\n",
+       "      <th>XM</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1594</th>\n",
+       "      <td>[-9, 6, 3, -6]</td>\n",
+       "      <td>[-2, -7, -5]</td>\n",
+       "      <td>9</td>\n",
+       "      <td>[2, 2, 2, 7, -9, 14, -23, -23, 28]</td>\n",
+       "      <td>45</td>\n",
+       "      <td>[{'D→nu_R+fi+fj': [-9, 2, 7]}, {'X→nu_R+fi+fj': [-23, 7, 14]}]</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>{2: [-23], 3: [2]}</td>\n",
+       "      <td>[2]</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[-23]</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   k             l  n                            solution  \\\n",
+       "1594  [-9, 6, 3, -6]  [-2, -7, -5]  9  [2, 2, 2, 7, -9, 14, -23, -23, 28]   \n",
+       "\n",
+       "      gcd                                                            nu_R  \\\n",
+       "1594   45  [{'D→nu_R+fi+fj': [-9, 2, 7]}, {'X→nu_R+fi+fj': [-23, 7, 14]}]   \n",
+       "\n",
+       "      DarkDirac  DarkMajor  XDirac  XMajor                sltn   DD DM     XD  \\\n",
+       "1594          1          0       1       0  {2: [-23], 3: [2]}  [2]  0  [-23]   \n",
+       "\n",
+       "     XM  \n",
+       "1594  0  "
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cl[cl['solution'].astype(str)=='[2, 2, 2, 7, -9, 14, -23, -23, 28]']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
