--- a/anomalysolutions.ipynb
+++ b/anomalysolutions.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
     "            if nrow['sltn'].get(3)  and len( nrow['sltn'].get(3)  ) <= 1:\n",
     "                nrow['sltn']=dict( ((k,v) for k,v in nrow['sltn'].items() if k!=3) )\n",
     "            elif nrow['sltn'].get(3)  and len( nrow['sltn'].get(3)  ) > 1:\n",
-    "                print('WARNING: More than one triplet in X solution not yet implemented in X solutions')\n",
+    "                print('WARNING: More than one triplet in X solution not yet implemented in X solutions: {}'.format(nrow['solution']))\n",
     "    # model=='DDirac' or model=='DMajor'\n",
     "    else:\n",
     "        i=3\n",
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +395,7 @@
        "0  [-1, -2]  [2]  5  [2, 4, -7, -9, 10]    1"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
        "(24326, 5)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +489,7 @@
        "0  [-1, -2]  [2]  5  [2, 4, -7, -9, 10]    1"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +538,7 @@
        "((24326, 10), (24326, 10))"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +657,7 @@
        "2          2          0       0       0  {2: [17]}  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -675,85 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>k</th>\n",
-       "      <th>l</th>\n",
-       "      <th>n</th>\n",
-       "      <th>solution</th>\n",
-       "      <th>gcd</th>\n",
-       "      <th>nu_R</th>\n",
-       "      <th>DarkDirac</th>\n",
-       "      <th>DarkMajor</th>\n",
-       "      <th>XDirac</th>\n",
-       "      <th>XMajor</th>\n",
-       "      <th>sltn</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1594</th>\n",
-       "      <td>[-9, 6, 3, -6]</td>\n",
-       "      <td>[-2, -7, -5]</td>\n",
-       "      <td>9</td>\n",
-       "      <td>[2, 2, 2, 7, -9, 14, -23, -23, 28]</td>\n",
-       "      <td>45</td>\n",
-       "      <td>[{'D→nu_R+fi+fj': [-9, 2, 7]}, {'X→nu_R+fi+fj': [-23, 7, 14]}]</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>{2: [-23], 3: [2]}</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                   k             l  n                            solution  \\\n",
-       "1594  [-9, 6, 3, -6]  [-2, -7, -5]  9  [2, 2, 2, 7, -9, 14, -23, -23, 28]   \n",
-       "\n",
-       "      gcd                                                            nu_R  \\\n",
-       "1594   45  [{'D→nu_R+fi+fj': [-9, 2, 7]}, {'X→nu_R+fi+fj': [-23, 7, 14]}]   \n",
-       "\n",
-       "      DarkDirac  DarkMajor  XDirac  XMajor                sltn  \n",
-       "1594          1          0       1       0  {2: [-23], 3: [2]}  "
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cl[cl['solution'].astype(str)=='[2, 2, 2, 7, -9, 14, -23, -23, 28]']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -854,7 +776,7 @@
        "2  {2: [26]}  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -866,22 +788,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING: More than one triplet in X solution not yet implemented in X solutions\n",
-      "WARNING: More than one triplet in X solution not yet implemented in X solutions\n"
+      "WARNING: More than one triplet in X solution not yet implemented in X solutions: [2, -7, -8, -8, -8, 18, 18, 18, -25]\n",
+      "WARNING: More than one triplet in X solution not yet implemented in X solutions: [4, 4, 4, 5, -6, -6, -6, -10, 11]\n"
      ]
     }
    ],
@@ -905,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1022,7 +937,7 @@
        "2          2          0       0       0  {2: [17]}  [17]  0  0  0  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
