--- a/anomalysolutions.ipynb
+++ b/anomalysolutions.ipynb
@@ -788,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -805,10 +805,10 @@
     "cl['DM']=cl.apply(lambda row: get_nuR(row,'DarkMajor'),axis='columns')\n",
     "cl['XD']=cl.apply(lambda row: get_nuR(row,'XDirac'),axis='columns')\n",
     "cl['XM']=cl.apply(lambda row: get_nuR(row,'XMajor'),axis='columns')\n",
-    "cl6['DD']=cl6.apply(lambda row: get_nuR(row,'DarkDirac'),axis='columns')\n",
-    "cl6['DM']=cl6.apply(lambda row: get_nuR(row,'DarkMajor'),axis='columns')\n",
-    "cl6['XD']=cl6.apply(lambda row: get_nuR(row,'XDirac'),axis='columns')\n",
-    "cl6['XM']=cl6.apply(lambda row: get_nuR(row,'XMajor'),axis='columns')"
+    "cl6['DD']=cl6.apply(lambda row: get_nuR(row,'DarkDirac',Dim=6),axis='columns')\n",
+    "cl6['DM']=cl6.apply(lambda row: get_nuR(row,'DarkMajor',Dim=6),axis='columns')\n",
+    "cl6['XD']=cl6.apply(lambda row: get_nuR(row,'XDirac',Dim=6),axis='columns')\n",
+    "cl6['XM']=cl6.apply(lambda row: get_nuR(row,'XMajor',Dim=6),axis='columns')"
    ]
   },
   {
@@ -947,6 +947,134 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>k</th>\n",
+       "      <th>l</th>\n",
+       "      <th>n</th>\n",
+       "      <th>solution</th>\n",
+       "      <th>gcd</th>\n",
+       "      <th>nu_R</th>\n",
+       "      <th>DarkDirac</th>\n",
+       "      <th>DarkMajor</th>\n",
+       "      <th>XDirac</th>\n",
+       "      <th>XMajor</th>\n",
+       "      <th>sltn</th>\n",
+       "      <th>DD</th>\n",
+       "      <th>DM</th>\n",
+       "      <th>XD</th>\n",
+       "      <th>XM</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>[10, 5]</td>\n",
+       "      <td>[10, -2]</td>\n",
+       "      <td>6</td>\n",
+       "      <td>[17, -19, -23, 28, 28, -31]</td>\n",
+       "      <td>200</td>\n",
+       "      <td>[{'D→nu_R+2fi+2fj': [-31, 17, 28]}]</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>{2: [28]}</td>\n",
+       "      <td>[28]</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>[-2, 1]</td>\n",
+       "      <td>[-2, -1]</td>\n",
+       "      <td>6</td>\n",
+       "      <td>[16, -19, -20, 26, 26, -29]</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[{'D→nu_R+2fi+2fj': [-29, 16, 26]}]</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>{2: [26]}</td>\n",
+       "      <td>[26]</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>[-2, 1]</td>\n",
+       "      <td>[-2, 1]</td>\n",
+       "      <td>6</td>\n",
+       "      <td>[4, -8, -17, 26, 26, -31]</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[{'D→nu_R+2fi+2fj': [-17, 4, 26]}]</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>{2: [26]}</td>\n",
+       "      <td>[26]</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         k         l  n                     solution  gcd  \\\n",
+       "0  [10, 5]  [10, -2]  6  [17, -19, -23, 28, 28, -31]  200   \n",
+       "1  [-2, 1]  [-2, -1]  6  [16, -19, -20, 26, 26, -29]    1   \n",
+       "2  [-2, 1]   [-2, 1]  6    [4, -8, -17, 26, 26, -31]    1   \n",
+       "\n",
+       "                                  nu_R  DarkDirac  DarkMajor  XDirac  XMajor  \\\n",
+       "0  [{'D→nu_R+2fi+2fj': [-31, 17, 28]}]          1          0       0       0   \n",
+       "1  [{'D→nu_R+2fi+2fj': [-29, 16, 26]}]          1          0       0       0   \n",
+       "2   [{'D→nu_R+2fi+2fj': [-17, 4, 26]}]          1          0       0       0   \n",
+       "\n",
+       "        sltn    DD DM XD XM  \n",
+       "0  {2: [28]}  [28]  0  0  0  \n",
+       "1  {2: [26]}  [26]  0  0  0  \n",
+       "2  {2: [26]}  [26]  0  0  0  "
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cl6[:3]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -964,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
