filter solutions for D=5 implemented

--- a/anomalysolutions.ipynb
+++ b/anomalysolutions.ipynb
@@ -3457,18 +3457,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\\begin{tabular}{llrrlllll}\n",
+      "\\begin{tabular}{rlllrllll}\n",
       "\\toprule\n",
-      "             l &                k & gcd & n &                           solution &          DD &    DM &        XD &   XM \\\\\n",
+      "n &             l &                 k &                                 solution & n &            DD &        DM &        XD &    XM \\\\\n",
       "\\midrule\n",
-      "       (2, -2) &          (-1, 0) &   4 & 6 &              (1, -2, -3, 5, 5, -6) &         (5) &     0 &         0 &    0 \\\\\n"
+      "6 &       (2, -2) &           (-1, 0) &                    (1, -2, -3, 5, 5, -6) & 6 &           (5) &         0 &         0 &     0 \\\\\n"
      ]
     }
    ],
@@ -9180,6 +9180,26 @@
    ],
    "source": [
     "anomaly.free.simplified"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5100, 10)"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ds[ds['solution'].apply(lambda l: np.abs(l).max())<=23].shape"
    ]
   },
   {
